--- a/client/src/index.css
+++ b/client/src/index.css
@@ -11,5 +11,17 @@ body {
     .btn-default {
         @apply p-4 rounded-2xl bg-white hover:bg-slate-200 font-sans hover:translate-y-1 transition-all duration-200
     }
+    
+    .nav-link {
+        @apply text-3xl px-4 py-2 rounded-xl underline-offset-8 hover:bg-blue4 transition-all ease-in-out duration-200 text-white hover:scale-[.95]
+    }
+    
+}
 
+a.active {
+    background-color: rgb(74, 143, 223)
+}
+
+a.active:hover {
+    transform: scale(1)
 }
