--- a/client/src/index.css
+++ b/client/src/index.css
@@ -11,6 +11,10 @@ body {
     .btn-default {
         @apply p-4 rounded-2xl bg-smoke hover:bg-slate-200 font-sans hover:translate-y-1 transition-all duration-200
     }
+
+    .btn-default:disabled {
+        @apply bg-teal hover:translate-y-0 transition-none hover:cursor-default
+    }
     
     .nav-link {
         @apply text-3xl text-smoke px-4 py-2 rounded-xl underline-offset-8 hover:bg-baby transition-all ease-in-out duration-200 hover:scale-[.95]
