EntryRequests can be created by sender, reciever has no connection yet

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -2,6 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
+html {
+    scroll-behavior: smooth;
+}
+
 body {
     background-color: #F1EEEE;
     font-family: 'Titillium Web', sans-serif;
