--- a/client/src/index.css
+++ b/client/src/index.css
@@ -6,6 +6,20 @@ html {
     scroll-behavior: smooth;
 }
 
+::-webkit-scrollbar {
+    width: 12px;
+}
+::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px     rgba(0, 0, 0, 0.295); 
+    border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    -webkit-box-shadow: inset 0 0 6px     rgba(0,0,0,0.3); 
+    background-color: #F1EEEE;
+}
+
 body {
     background-color: #F1EEEE;
     font-family: 'Titillium Web', sans-serif;
